--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,5 +1,6 @@
 link(href="/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet")
 link(href="/libs/AdminLTE.css" rel="stylesheet")
 link(href="/libs/skins.css" rel="stylesheet")
+link(href="/stylesheets/style.css" rel="stylesheet")
 script(src="/libs/jquery/dist/jquery.min.js")
 script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
