--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -7,12 +7,12 @@
 				.collapse.navbar-collapse.pull-left
 					ul.nav.navbar-nav
 						li
-							a(href='#') 地图数据展示
+							a(href='/map') 地图数据展示
 						li
-							a(href='#') 新浪微博数据展示
+							a(href='sinaweibo') 新浪微博数据展示
 						li
-							a(href='#') 默默数据展示
+							a(href='/momo') 默默数据展示
 						li
-							a(href='#') 易信地图数据展示
+							a(href='/yixin') 易信地图数据展示
 						li
-							a(href='#') UC浏览器数据展示
+							a(href='uc') UC浏览器数据展示
