--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -4,3 +4,5 @@ link(href="/libs/skins.css" rel="stylesheet")
 link(href="/stylesheets/style.css" rel="stylesheet")
 script(src="/libs/jquery/dist/jquery.min.js")
 script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
+script(src="/javascripts/app.min.js")
+script(src="/javascripts/jquery.slimscroll.min.js")
