--- a/views/pages/test.jade
+++ b/views/pages/test.jade
@@ -110,7 +110,7 @@ html
 												th 姓名
 												th 姓名
 										tbody
-										rfoot
+										tfoot
 											tr
 												th 姓名
 												th 姓名
