--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -15,7 +15,7 @@ html
 					.col-md-6.col-sm-6
 						.intro-section
 							a.btn.btn-info.btn-lg.standard-button(href='./upload' target="_blank") 上传文件
-							a.btn.btn-info.btn-lg.standard-button(href='./map' target="_blank") 数据展示
+							a.btn.btn-info.btn-lg.standard-button(href='./map1' target="_blank") 数据展示
 					.col-md-6.col-sm-6.hidden-xs
 						.phone-image
 							img.img-responsive(src="./images/phone.png" alt="")
