--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -2,7 +2,13 @@ link(href="/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet")
 link(href="/libs/AdminLTE.css" rel="stylesheet")
 link(href="/libs/skins.css" rel="stylesheet")
 link(href="/stylesheets/style.css" rel="stylesheet")
+link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet")
+link(href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet")
 script(src="/libs/jquery/dist/jquery.min.js")
 script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
 script(src="/javascripts/app.min.js")
 script(src="/javascripts/jquery.slimscroll.min.js")
+//- [if lt IE 9]
+//-     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+//-     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+//- [endif]
