--- a/views/pages/map1.jade
+++ b/views/pages/map1.jade
@@ -6,6 +6,8 @@ html
 		meta(content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport")
 		title #{title}
 		include ../includes/head
+		script(src=src="http://webapi.amap.com/maps?v=1.3&key=5c966df57d471c0bfb13366f2dd50ada" type="text/javascript")
+		script(src="/javascripts/map.js")
 	body.hold-transition.skin-blue.fixed.sidebar-mini
 		.wrapper
 
@@ -97,59 +99,19 @@ html
 										| Dashboard v2
 			.content-wrapper
 				section.content-header
-					h1 数据上传
-						small #{tiptitle}
+					h1 地图数据展示
 					ol.breadcrumb
 						li
 							i.fa.fa-dashboard
-							| 数据上传	
+							| 地图数据展示	
 				section.content
 					.row
-						.col-md-6
+						.col-md-12
 							.box.box-primary
 								.box-header.with-border
-									h3.box-title 地图数据库文件上传
+									h3.box-title  地图数据展示
 								.box-body
-									form(method='post' enctype='multipart/form-data' action="/upload/map")
-										input.btn.btn-default.col-xs-7(type='file' name="thumbnail")
-										input.btn.btn-primary.pull-right(type='submit')
-								.box-footer
-						.col-md-6
-							.box.box-success
-								.box-header.with-border
-									h3.box-title 易信数据库文件上传
-								.box-body
-									form(method='post' enctype='multipart/form-data' action="/upload/yixin")
-										input.btn.btn-default.col-xs-7(type='file' name="thumbnail")
-										input.btn.btn-success.pull-right(type='submit')
-								.box-footer
-						.col-md-6
-							.box.box-info
-								.box-header.with-border
-									h3.box-title 陌陌数据库文件上传
-								.box-body
-									form(method='post' enctype='multipart/form-data' action="/upload/momo")
-										input.btn.btn-default.col-xs-7(type='file' name="thumbnail")
-										input.btn.btn-info.pull-right(type='submit')
-								.box-footer
-						.col-md-6
-							.box.box-danger
-								.box-header.with-border
-									h3.box-title 新浪数据库文件上传
-								.box-body
-									form(method='post' enctype='multipart/form-data' action="/upload/sinaweibo")
-										input.btn.btn-default.col-xs-7(type='file' name="thumbnail")
-										input.btn.btn-danger.pull-right(type='submit')
-								.box-footer
-						.col-md-6
-							.box.box-warning
-								.box-header.with-border
-									h3.box-title  UC浏览器数据库文件上传
-								.box-body
-									form(method='post' enctype='multipart/form-data' action="/upload/uc")
-										input.btn.btn-default.col-xs-7(type='file' name="thumbnail")
-										input.btn.btn-warning.pull-right(type='submit')
-								.box-footer
+									#container-map1.col-xs-12
 			footer.main-footer
 				.pull-right.hidden-xs
 					b Version
@@ -159,5 +121,4 @@ html
 			.control-sidebar-bg
 
 
-		
 		
